initial move html -> md

--- a/index.html
+++ b/index.html
@@ -858,27 +858,7 @@
       <div class="exercise" id="exercise_arrays_add_sum">
       <h2>Arrays: Adding, removing, and summing elements</h2>
       <div class="instructions">
-      <p>We are now going to learn how to add items to, remove items from, and get the sum of, an array of numbers. We're going to keep a running sum of the last five numbers (this can be a way of keeping track of how a value trends over time, e.g. the last 5 times you weighed yourself, or the last 5 times you went running).
-      </p>
-      <ol>
-          <li>Start with an input box, a button to add numbers, and a span to display the total. (<code class="start_code">&lt;p&gt;Total of the last 5 numbers: &lt;span id="total"&gt;&lt;/span&gt; &lt;/p&gt;<br>&lt;input id="number" /&gt;<br>&lt;button id="add_number"&gt;add value&lt;/button&gt;</code></li>
-          <li>Let's start with an array of elements and show their sum<ol>
-            <li>In an <span class="blockname">"at the start"</span> block, create a new array called "numbers" with 5 items, all set to the value 0</li>
-            <li>Find the span with id "total" and set its text content to the sum of the numbers array, using the <span class="blockname">"get the sum of the numbers in array"</span> block</li>
-          </ol></li>
-          <li>Next, let's take the number in the input element, add it to the array and display the sum again when the button is clicked<ol>
-            <li>You already know how to get the value from the input element is clicked</li>
-            <li>Let's add that value to the numbers array. From the arrays menu, use the <span class="blockname">"add ... to the start/end of the array"</span> block, selecting "end", and setting the value to the value of the input element.</li>
-            <li>You can now display the sum of the array again, in the same way as you already did</li>
-            <li>Test that this works (and note, that it displays the full sum of the array, not just the last 5 numbers).</li>
-          </ol></li>
-          <li>Last, we need to remove the first (oldest) element from the array. <ol>
-            <li>From the arrays menu take a <span class="blockname">"get the first item from the array"</span> block.</li>
-            <li>Change the dropdown to from "get" to "remove", to remove the first item</li>
-            <li>Where do you need to place this removing so that there are only ever 5 numbers in the list when the sum is calculated?</li>
-            <li>Test that this works and that the sum is only ever that of the last 5 numbers.</li>
-          </ol></li>
-      </ol>
+        <zero-md src="exercises/arrays_add_sum.md"></zero-md>
       </div>
       <xml class="toolbox" style="display: none">
         <category name="Logic" colour="210">
