move html -> md

--- a/index.html
+++ b/index.html
@@ -1122,10 +1122,10 @@
       </div>
 
       
-      <div class="exercise" id="exercise_create_teams">
+      <div class="exercise" id="exercise_random_facilitator">
       <h2>Project: Select a random facilitator</h2>
       <div class="instructions">
-        <p>For this project, you should provide the user with the ability to input names to an array, and a "select facilitator" button that selects and displays a random name</p>
+        <zero-md src="exercises/random_facilitator.md"></zero-md>
       </div>
       </div>
 
