move html -> md

--- a/index.html
+++ b/index.html
@@ -1132,28 +1132,7 @@
       <div class="exercise" id="exercise_earnings_expenses">
       <h2>Project: Show earnings and expenses</h2>
       <div class="instructions">
-        <p>For this project, you should provide the user with the ability to input earnings and expenses and see the totals</p>
-        <ol>
-          <li>Two lists and three totals should be shown: the earnings, the expenses, the total earnings, the total expenses and the total balance overall</li>
-          <li>A positive number is an earning</li>
-          <li>A negative number is an expense</li>
-          <li>If the user inputs 5, -2, 25, -10, -7, the result should look something like: 
-            <div style="background-color: azure;">
-              Earnings: 30
-              <ul>
-                <li>5</li>
-                <li>25</li>
-              </ul>
-              Expenses: -19
-              <ul>
-                <li>-2</li>
-                <li>-10</li>
-                <li>-3</li>
-              </ul>
-              Balance: 11
-            </div>
-          </li>
-        </ol>
+        <zero-md src="exercises/earnings_expenses.md"></zero-md>
       </div>
       </div>
       
