move html -> md

--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@
       <div class="exercise" id="exercise_list_consolidation">
       <h2>Project: List of links</h2>
       <div class="instructions">
-        <p>Repeat the exercise to show a list of your favourite links. Use a loop so that there are only two "create a ... element" blocks (one for the &lt;li&gt;, one for the &lt;a&gt;). Outline what your solution needs to look like, and implement it step by step, clicking "run" at each iteration to check your work</p>
+        <zero-md src="exercises/list_consolidation.md"></zero-md>
       </div>
       </div>
       
