move html -> md

--- a/index.html
+++ b/index.html
@@ -1166,12 +1166,9 @@
       
       <div class="exercise" id="exercise_story_book">
       <h2>Project: Create a story book</h2>
-      <div class="instructions"><p>The great thing about story books is that you never know what will happen when you turn the page!</p>
-      <ol>
-          <li>Create a simple story book "experience" where you click on a button to "turn the page" and something new happens each time</li>
-          <li>Make the story a bit more complicated. Maybe the user has choices? Maybe an image appears at the end?</li>
-      </ol>
-      </div></div>
+      <div class="instructions">
+        <zero-md src="exercises/story_book.md"></zero-md>
+      </div>
       
       <div class="exercise" id="exercise_image_carousel">
       <h2>Project: Build an image carousel</h2>
