move: html -> md

--- a/index.html
+++ b/index.html
@@ -1175,28 +1175,9 @@
       
       <div class="exercise" id="exercise_image_carousel">
       <h2>Project: Build an image carousel</h2>
-      <div class="instructions"><p>
-        An image carousel has an image with two buttons ("previous" and "next")
-        that allow the user to cycle through a list of images.
-      </p>
-      <ul>
-        <li>
-          A list of at least 3 image URLs should be defined in an array (you can
-          use public URLs from stock photograph websites, or copy the image link from a google search result)
-        </li>
-        <li>
-          Clicking on the "previous" button should show the previous image
-        </li>
-        <li>Clicking on the "next" button should show the next image</li>
-        <li>
-          The images should cycle (the next image after the last image should be the first image, and the previous image before the first image should be the last image)
-        </li>
-      </ul>
-      <p>
-        You should first break down this problem into steps, then outline how
-        each step will probably be solved (and how you can test that it does what you think it does), before creating any blocks
-      </p>
-    </div></div>
+      <div class="instructions">
+        <zero-md src="exercises/image_carousel.md"> </zero-md>
+      </div>
     
       <div class="exercise" id="exercise_projects">
       <h2>Some more "projects"</h2>
