add missing </div>s to image carousel and story book

--- a/index.html
+++ b/index.html
@@ -1114,11 +1114,13 @@
       <div class="instructions">
         <zero-md src="exercises/story_book.md"></zero-md>
       </div>
+      </div>
       
       <div class="exercise" id="exercise_image_carousel">
       <h2>Project: Build an image carousel</h2>
       <div class="instructions">
         <zero-md src="exercises/image_carousel.md"> </zero-md>
+      </div>
       </div>
     
       <div class="exercise" id="exercise_projects">
