Add random block for buttons and clicks consolidation. Don't make it seem like exercise is optional

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
             <block type="text"></block>
             <block type="colour_picker"></block>
             <block type="logic_boolean"></block>
+            <block type="get_randomWord"></block>
           </category>
           <category name="Html" colour="%{BKY_COLOUR_HUE}">
             <block type="on_start"></block>
