Fix missing closing div

--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,7 @@
       <div class="instructions">
         <zero-md src="exercises/more_projects.md"></zero-md>
       </div>
+      </div>
 
     <footer>
       <h3>CYF Blocks is a project of <a href="https://codeyourfuture.io">Code Your Future</a></h3>
