rename new block to get_input_data_with_id

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </block>
             <block type="set_attribute"></block>
             <block type="remove_contents"></block>
-            <block type="get_input_string_or_number_with_id"></block>
+            <block type="get_input_data_with_id"></block>
           </category>
          <category name="Variables" colour="330" custom="VARIABLE"></category>
         </xml>
@@ -364,7 +364,7 @@
             </block>
             <block type="set_attribute"></block>
             <block type="remove_contents"></block>
-            <block type="get_input_string_or_number_with_id"></block>
+            <block type="get_input_data_with_id"></block>
           </category>
          <category name="Variables" colour="330" custom="VARIABLE"></category>
         </xml>
@@ -399,7 +399,7 @@
             </block>
             <block type="set_attribute"></block>
             <block type="remove_contents"></block>
-            <block type="get_input_string_or_number_with_id"></block>
+            <block type="get_input_data_with_id"></block>
           </category>
          <category name="Variables" colour="330" custom="VARIABLE"></category>
         </xml>
@@ -629,7 +629,7 @@
           </block>
           <block type="set_attribute"></block>
           <block type="remove_contents"></block>
-          <block type="get_input_string_or_number_with_id"></block>
+          <block type="get_input_data_with_id"></block>
           <block type="element_clicked_current"></block>
           <block type="with_elements_by_selector"></block>
         </category>
@@ -747,7 +747,7 @@
           </block>
           <block type="set_attribute"></block>
           <block type="remove_contents"></block>
-          <block type="get_input_string_or_number_with_id"></block>
+          <block type="get_input_data_with_id"></block>
           <block type="element_clicked_current"></block>
           <block type="with_elements_by_selector"></block>
         </category>
@@ -830,7 +830,7 @@
           </block>
           <block type="set_attribute"></block>
           <block type="remove_contents"></block>
-          <block type="get_input_string_or_number_with_id"></block>
+          <block type="get_input_data_with_id"></block>
           <block type="element_clicked_current"></block>
           <block type="with_elements_by_selector"></block>
         </category>
@@ -913,7 +913,7 @@
           </block>
           <block type="set_attribute"></block>
           <block type="remove_contents"></block>
-          <block type="get_input_string_or_number_with_id"></block>
+          <block type="get_input_data_with_id"></block>
           <block type="element_clicked_current"></block>
           <block type="with_elements_by_selector"></block>
         </category>
@@ -1057,7 +1057,7 @@
         </block>
         <block type="set_attribute"></block>
         <block type="remove_contents"></block>
-        <block type="get_input_string_or_number_with_id"></block>
+        <block type="get_input_data_with_id"></block>
         <block type="element_clicked_current"></block>
         <block type="with_elements_by_selector"></block>
       </category>
