use local versions of blockly and zero md from npm instead of mdn

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     
 
     <link rel="stylesheet" href="./style.css" />
-    <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
+    <script type="module" src="node_modules/zero-md/dist/zero-md.min.js"></script>
   </head>
   <body>
-    <script src="https://unpkg.com/blockly@7.20211209.0/blockly.min.js"></script>
+    <script src="node_modules/blockly/blockly.min.js"></script>
     <script src="blockly-dom.js"></script>
     <script src="blockly-cyf.js"></script>
     <script src="jsoncrush.js"></script>
