implement changes from feedback

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </block>
             <block type="set_attribute"></block>
             <block type="remove_contents"></block>
-            <block type="get_input_text/string_with_id"></block>
+            <block type="get_input_data_with_id"></block>
           </category>
         </xml>
       </div>
