add toggleAttribute to default toolbox
this will show up in projects view

--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,7 @@
           </value>
         </block>
         <block type="set_attribute"></block>
+        <block type="toggle_attribute"></block>
         <block type="remove_contents"></block>
         <block type="get_input_value_with_id"></block>
         <block type="element_clicked_current"></block>
