Refactored JS code and fix some bugs

--- a/index.html
+++ b/index.html
@@ -1174,5 +1174,8 @@
       <category name="Functions" colour="290" custom="PROCEDURE"></category>
     </xml>
     <script src="exercises.js"></script>
+    <script>
+      pageSetup(false);  // false => this page contains only exercises (true => the page containing only examples)
+    </script>    
 </body>
 </html>
