--- a/examples.html
+++ b/examples.html
@@ -35,17 +35,16 @@
       <h2>Understanding the CYF Blocks interface</h2>
       <div class="instructions">
         <zero-md src="examples/understanding_cyf_blocks_interface.md"
-        start_code="('j!()~h!'Name%3A%20%3Cinput*input-0.*.-Click%20Me%3C%2F.%3E0div*msg-%3C%2Fdiv%3E')*%20id%3D1-1%3E.button0%5Cn%3C1%5C'%0110.-*_"
+          start_code="('j!()~h!'Name%3A%20%3Cinput*input-0.*.-Click%20Me%3C%2F.%3E0div*msg-%3C%2Fdiv%3E')*%20id%3D1-1%3E.button0%5Cn%3C1%5C'%0110.-*_"
         ></zero-md>
       </div>
     </div>
 
-
     <div class="exercise" id="example_changing_text_content">
-      <h2>Example 1: Changing text content of an element</h2>
+      <h2>Example: Changing text content of an element</h2>
       <div class="instructions">
         <zero-md src="examples/changing_text_content.md"
-          start_code="(%27j.Ys.languageVersion!0~Ys!%5B(%27Jon_startMb%25%2F%60*lX6fD%25X8%3F%5B%24-kNW%27~x!195~y!93OTEXT1!%27at%20the%20start%20%7Bwhen%20run%20is%20clicked%7D%27)QHANDLER.Y.Jwith_element_by_idMtPIR(%3F%60S%3B%2Ce3BIZ_0%2BR%27%3A%27OID!%27v2%27)QSTACK.Y.Jset_contentM%3F%7D0%2C%27%3FKh*z%5DUS)I%7DeIuU_%27QVALUE.shadow.JtextM7DD3_NhkzP%7C6kA%2F%2FE%7C0c%27OTEXT!%27Hello%27)))))))))))%5D))~h!%2741q>FirstG%5Cn42q>SecondG%27).!(%274<p%20id%3DqvG%20v<%2Fp>Jtype!%27M%27~id!%27O~fields.Q~inputs.Yblockq%5C%27vword%01vqYQOMJG4._"
+          start_code='(%27j.Ys.languageVersion!0~Ys!%5B(%27Jon_startMb%25%2F%60*lX6fD%25X8%3F%5B%24-kNW%27~x!195~y!93OTEXT1!%27at%20the%20start%20%7Bwhen%20run%20is%20clicked%7D%27)QHANDLER.Y.Jwith_element_by_idMtPIR(%3F%60S%3B%2Ce3BIZ_0%2BR%27%3A%27OID!%27v2%27)QSTACK.Y.Jset_contentM%3F%7D0%2C%27%3FKh*z%5DUS)I%7DeIuU_%27QVALUE.shadow.JtextM7DD3_NhkzP%7C6kA%2F%2FE%7C0c%27OTEXT!%27Hello%27)))))))))))%5D))~h!%2741q>FirstG%5Cn42q>SecondG%27).!(%274<p%20id%3DqvG%20v<%2Fp>Jtype!%27M%27~id!%27O~fields.Q~inputs.Yblockq%5C%27vword%01vqYQOMJG4._'
         >
         </zero-md> 
       </div>
@@ -66,7 +65,97 @@
       </xml>      
     </div>
 
+
+    <div class="exercise" id="example_changing_attribute">
+      <h2>Example: Changing attributes of an element</h2>
+      <div class="instructions">
+        <zero-md src="examples/changing_attribute.md"
+          start_code=
+          '(%27j!(%27blocks!(%27languageVersion!0~blocks!%5B(%27type!%27on_start%26b%25%2F%60*lX6fD%25X8%3F%5B%24-kNW%27~x!76~y!67qTEXT1!%27at%20the%20start%20%7Bwhen%20run%20is%20clicked%7DvHANDLERFwith_element_by_id%26tPIR(%3F%60S%3B%2Ce3BIZ_0%2BR%27%3A%27qID!%27messagevSTACK"PRae%2F%2C%27tG8)%2F.-Gz9%2C%27rWC%40c%5Ecolour_picker%26I%2CByAz%2C%270a%2C%27yp(I45%3DDaQ%27qCOLOUR!%27%23ffcc00%27))))~next"B%7DwL%23R%7B9%7Be2cHG%2C%27%3FJoa%3A%40backgroundC%5Etext%26B)faG3f%242M%23upHU%5D%25mR%25%27qTEXT!%27blue%27)))))))))))))%5D))~h!%27<span%20id%3D%5C%27message%5C%27>Hello%27%3A<%2Fspan>%5Cn%27)F!(%27block!(%27type!%27q~fields!(%27v%27)~inputs!(%27"Fset_attribute%26%26%27~id!%27%40%27qPROPERTY!%27%5EolorvVALUEF%01%5E%40%26"vqF_'
+        >
+        </zero-md> 
+      </div>
+      <xml class="toolbox" style="display: none">
+        <category name="Values" colour='%{BKY_TEXTS_HUE}'>
+          <block type="text"></block>
+          <block type="colour_picker"></block>          
+          <block type="get_randomWord"></block>
+        </category>
+        <category name="Html" colour="%{BKY_COLOUR_HUE}">
+          <block type="on_start"></block>
+          <block type="with_element_by_id"></block>
+          <block type="set_content">
+            <value name="VALUE">
+              <shadow type="text"> </shadow>
+            </value>
+          </block>
+          <block type="set_attribute"></block>          
+        </category>
+      </xml>      
+    </div>
     
+
+    <div class="exercise" id="example_adding_child_element">
+      <h2>Example: Adding a child element</h2>
+      <div class="instructions">
+        <zero-md src="examples/adding_child_element.md"
+          start_code=
+          "('j!('blocks!('languageVersion!0~blocks!%5B('type!'on_start'~id!'b%25%2F%60*lX6fD%25X8%3F%5B%24-kNW'~x!46~y!19QTEXT1!'at%20the%20start%20%7Bwhen%20run%20is%20clicked%7D')%22HANDLERGwith_element_by_id'~id!'tPIR(%3F%60S%3B%2Ce3BIZ_0%2BR'%3A'QID!'mylist')%22STACK%7FMRb'%3A5F.8xn%25o%3APTW%2FS*2%C2%80Gset_content'~id!'U%5EL%3FZCXrX(JdiF66gl%5DI%26Cama4EEvTb%7C(z%3Dr%23SJqy'QTEXT!'Apple')))))))~next%7Fa9%5Ddw%7Cn%3Fn0Krfpw%251%237n%C2%80%7FwcwcbnJpueq8dV%3FvBd_K'QELEMENT!'a')%22STACKGset_attribute'~id!'%2Bgq0J2dl%3BK5%24%2F1b11xUR'QPROPERTY!'href')%22VALUEGtext'~id!'*rrC.%5E%5Exs%23aY%2CB%3B3Bf%7B5'QTEXT!'https%3A%2F%2Fblocks.codeyourfuture.io%2F'))))~nextGset_content'~id!'f%5E%40B%25b4NbzL%3F%25kz%7BTZ_N%26PV7Y26v3bdx01%3Df%7D%5D%252%3D'QTEXT!'CYF%20Blocks')))))))))))))))))))))%5D))~h!'%3Cul%20id%3D%5C'mylist%5C'%3E%3C%2Ful%3E%5Cn')G!('block!('type!'Q~fields!('%22~inputs!('%26'%22VALUE!('shadow!('type!'text'~id!'%7FGadd_element'~id!'%C2%80'QELEMENT!'li')%22STACK%01%C2%80%7F%26%22QG_"
+          >
+        </zero-md> 
+      </div>
+      <xml class="toolbox" style="display: none">
+        <category name="Values" colour='%{BKY_TEXTS_HUE}'>
+          <block type="text"></block>
+          <block type="colour_picker"></block>          
+          <block type="get_randomWord"></block>
+        </category>
+        <category name="Html" colour="%{BKY_COLOUR_HUE}">
+          <block type="on_start"></block>
+          <block type="with_element_by_id"></block>
+          <block type="set_content">
+            <value name="VALUE">
+              <shadow type="text"> </shadow>
+            </value>
+          </block>
+          <block type="set_attribute"></block>
+          <block type="add_element"></block>
+        </category>
+      </xml>      
+    </div>
+
+
+    <div class="exercise" id="example_removing_contents">
+      <h2>Example: Removing the contents of an element</h2>
+      <div class="instructions">
+        <zero-md src="examples/removing_contents.md"
+          start_code=
+          "('j!('blocks!('languageVersion!0~blocks!%5B('type!'on_start'~id!'b%25%2F%60*lX6fD%25X8%3F%5B%24-kNW'~x!46~y!25qTEXT1!'at%20the%20start%20%7Bwhen%20run%20is%20clicked%7D')~inputs!('HANDLER%7FtPIR(%3F%60S%3B%2Ce3BIZ_0%2BR'%3A'qID!'list1%22%C2%81T*prFX%7DccDT'%3AaavPK%7CYH')))~next%7Ffvl%3B3oD%25B%242%5Dr4SJNuVy'qID!'list2%22%C2%81%23-%40_%40%3Fn%7D%3A%603_n.cZYi9*'~nextGadd_element'~id!'UNUI%24%2B%7DtSEXWp%7DMbm%7DO8'qELEMENT!'li%22set_content'~id!'%40WgWRUMlK%24VN*nrzHCbd'~inputs!('VALUE!('shadow!('type!'text'~id!'%2C'vPs7fDmYU%24up%3D%5ETREnv'qTEXT!'New%20item'))))))))))))))))))%5D))~h!'%C2%801Q1%26%5Cn%C2%802Q2%26')G!('block!('type!'Q%5C'%3E%5Cn%20%20%3Cli%3EOriginal%20item%20q~fields!('%22')~inputs!('STACKG%26%3C%2Fli%3E%5Cn%3C%2Fol%3E%5Cn%7FGwith_element_by_id'~id!'%C2%80%3Col%20id%3D%5C'list%C2%81remove_contents'~id!'%01%C2%81%C2%80%7F%26%22qQG_"          
+          >
+        </zero-md> 
+      </div>
+      <xml class="toolbox" style="display: none">
+        <category name="Values" colour='%{BKY_TEXTS_HUE}'>
+          <block type="text"></block>
+          <block type="colour_picker"></block>          
+          <block type="get_randomWord"></block>
+        </category>
+        <category name="Html" colour="%{BKY_COLOUR_HUE}">
+          <block type="on_start"></block>
+          <block type="with_element_by_id"></block>
+          <block type="set_content">
+            <value name="VALUE">
+              <shadow type="text"> </shadow>
+            </value>
+          </block>
+          <block type="set_attribute"></block>
+          <block type="add_element"></block>
+          <block type="remove_contents"></block>          
+        </category>
+      </xml>      
+    </div>
+
+
 
     <footer>
       <h3>CYF Blocks is a project of <a href="https://codeyourfuture.io">Code Your Future</a></h3>
