flip view back, add link to examples
blockly is fierce to do UI battle with, now I remember

--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
 
     <footer>
       <h3>CYF Blocks is a project of <a href="https://codeyourfuture.io">Code Your Future</a></h3>
-      <p>Recap your HTML/CSS knowledge with this <a href="https://scrimba.com/learn/htmlcss">free crash course</a> on Scrimba.</p>
+      <p>Recap your HTML/CSS knowledge with this <a href="https://scrimba.com/learn/htmlcss">free crash course</a> on Scrimba. | Check out our <a href="examples.html">Helpful Examples</a> if you are struggling to get started</p>
     </footer>
      <section role="dialog" aria-live="assertive" class="toast" id="toast" aria-labelledby="toast-title">
       <h4 class="toast-title"></h4>
